--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.12.0-alpha01'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation 'androidx.compose.material:material:1.1.1'
 
     // Hilt, Dependency injection
     def hilt_version = "2.44"
