--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.maps.android:maps-compose:2.11.4'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation "org.mindrot:jbcrypt:0.4"
 
     // Hilt, Dependency injection
     def hilt_version = "2.44"
