--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'com.google.maps.android:maps-compose:2.11.4'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation "org.mindrot:jbcrypt:0.4"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 
     // Hilt, Dependency injection
     def hilt_version = "2.44"
